@@ -29,6 +29,9 @@
 #define ENABLE_NIS
 #define ENABLE_INFO
 
+/* Define this to enable some compatability with 1.x and 2.x info files */
+// #define INFO_COMPAT
+
 #include "dhcpcd.h"
 #include "interface.h"
 #include "dhcp.h"
